--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -62,7 +62,7 @@
             <div id="exam" class="collapse">
                 <div class="container-fluid">
                     <form id="questionform" action="point to a submit view" method="post">
-                        {% for question in ourse.question_set.all %}
+                        {% for question in course.question_set.all %}
                         <div class="card mt-1">
                             <div class="card-header"><h5>{{ question.question_text}}</h5></div>
                             {% csrf_token %}
