--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -38,10 +38,14 @@
 <div class="container-fluid">
     {% if grade > 80 %}
     <div class="alert alert-success">
+        <b>Congratulations, {{user.first_name}}!</b>
+        You have passed the exam and completed the course with a score {{grade}}/100
        <!--HINT Display passed info -->
     </div>
         {% else %}
         <div class="alert alert-danger">
+            <b>Failed</b>
+            Sorry, {{user.first_name}}!  You have failed exam with score {{grade}}/100
             <!--HINT Display failed info -->
         </div>
         <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
@@ -49,6 +53,33 @@
         <div class="card-columns-vertical mt-1">
         <h5 class="">Exam results</h5>
             <!--HINT Display exam results-->
+            {% for question in course.question_set.all %}
+            <div class="card mt-1">
+                <div class="card-header">
+                    <h5>{{question.text}}</h5>
+                </div>
+                {% csrf_token %}
+                <div class="form-group">
+                    {% for choice in question.choice_set.all %}
+                    <div class="form-check">
+                        {% if choice in submitted_choices and choice.is_correct %}
+                        <label class="form-check-label text-success">
+                            Correct answer: {{choice.text}}
+                        </label>
+                        {% elif choice in submitted_choices and not choice.is_correct %}
+                        <label class="form-check-label text-danger">
+                            Incorrect answer: {{choice.text}}
+                        </label>
+                        {% elif choice not in submitted_choices and choice.is_correct %}
+                        <label class="form-check-label text-warning">
+                            Not selected: {{choice.text}}
+                        </label>
+                        {% endif %}
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+            {% endfor %}
         </div>
     </div>
 </body>
